# magpie

./: .gitignore  BENCHMARK.md  CNAME  DOCUMENTATION.md  DOCUMENTATION_QUICKSTART.md  LICENSE  README.md  SKILL.md  SPEC.md  index.html  script.js  style.css
.cargo-home/: .global-cache
.cargo-local/: .global-cache
.github/workflows/: ci.yml
.omx/: metrics.json
.omx/logs/: hooks-2026-02-26.jsonl  turns-2026-02-26.jsonl
.omx/state/: hud-state.json  notify-hook-state.json  tmux-hook-state.json
crates/magpie_arc/src/: lib.rs
crates/magpie_ast/src/: lib.rs
crates/magpie_cli/: Cargo.toml
crates/magpie_cli/src/: main.rs
crates/magpie_codegen_llvm/: Cargo.toml
crates/magpie_codegen_llvm/src/: lib.rs
crates/magpie_codegen_wasm/src/: lib.rs
crates/magpie_csnf/src/: lib.rs
crates/magpie_ctx/src/: lib.rs
crates/magpie_diag/src/: lib.rs
crates/magpie_driver/: Cargo.toml
crates/magpie_driver/src/: lib.rs
crates/magpie_gpu/src/: lib.rs
crates/magpie_jit/: Cargo.toml
crates/magpie_mono/: Cargo.toml
crates/magpie_mpir/: Cargo.toml
crates/magpie_parse/: Cargo.toml
crates/magpie_rt/: Cargo.toml
crates/magpie_sema/: Cargo.toml
crates/magpie_web/: Cargo.toml
std/std.async/: async.mp
std/std.core/: core.mp
std/std.hash/: hash.mp
std/std.io/: io.mp
std/std.math/: math.mp
std/std.os/: os.mp
std/std.sync/: sync.mp
std/std.test/: test.mp
tests/: compiler_vectors_test.rs  integration_test.rs
tests/fixtures/: arithmetic.mp  async_fn.mp  collections.mp  enum_match.mp  feature_harness.mp  hello.mp  ownership.mp  try_error.mp
(+17 files in other folders)
